tests/examples/snapshots/fail/sorts/def_repeated_args.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/def_repeated_args.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: x was declared multiple times


